Update env variables for remote connection with axios

--- a/frontend.env
+++ b/frontend.env
@@ -1,5 +1,5 @@
 WDS_SOCKET_HOST=127.0.0.1 
 CHOKIDAR_USEPOLLING=true
 WATCHPACK_POLLING=true
-BACKEND_CONTAINER_HOST=wildforge-api
-BACKEND_CONTAINER_PORT=3000
+REACT_LOCAL_HOST=127.0.0.1
+REACT_LOCAL_HOST_PORT=8000
