--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.2",
@@ -21,7 +22,6 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "sass": "^1.68.0",
-    "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
