--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@babel/eslint-parser": "^7.22.15",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-react": "^7.22.15",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.3.1",
     "eslint": "^8.53.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
